# anydb

./: .gitignore  Cargo.toml  test_iter
.github/workflows/: rust.yml
crates/rawdb/: Cargo.toml  README.md
crates/rawdb/src/: disk_usage.rs  error.rs  hints.rs  hole_punch.rs  layout.rs  lib.rs  mmap.rs  reader.rs  region.rs  region_metadata.rs  region_state.rs  regions.rs
crates/rawdb/tests/: mod.rs
crates/vecdb/: Cargo.toml  README.md
crates/vecdb/data/: regions
crates/vecdb/examples/: bench.rs  compressed.rs  io_vs_mmap.rs  iter_vs_mmap.rs  pco_bench.rs  pcodec.rs  raw.rs  zerocopy.rs
crates/vecdb/src/: cursor.rs  error.rs  exit.rs  lib.rs  lookback.rs  stamp.rs  version.rs
crates/vecdb/src/base/: mod.rs  read_write.rs
crates/vecdb/src/exit/: guard.rs
crates/vecdb/src/iterators/: writer.rs
crates/vecdb/src/ops/: checked_sub.rs  mod.rs  saturating_add.rs
crates/vecdb/src/traits/: any.rs  any_collectable.rs  any_exportable.rs  any_serializable.rs  any_stored.rs  any_with_schema.rs  any_with_writer.rs  collectable.rs  compressable.rs  formattable.rs  from_coarser.rs  generic.rs  importable.rs  index.rs  iterable.rs  mod.rs  printable.rs  read_only_clone.rs  readable.rs  scannable.rs  serializable.rs  storage_mode.rs  stored.rs  typed.rs  value.rs  writable.rs
crates/vecdb/src/variants/: cached.rs  macros.rs  mod.rs
crates/vecdb/src/variants/base/: change.rs  format.rs  header.rs  mod.rs  options.rs  read_write.rs  shared_len.rs  stored_len.rs  with_prev.rs
crates/vecdb/src/variants/compressed/: mod.rs
crates/vecdb/src/variants/compressed/inner/: mod.rs  page.rs  pages.rs  read_only.rs  read_write.rs  rollback.rs  strategy.rs
crates/vecdb/src/variants/compressed/inner/read_only/: mod.rs
crates/vecdb/src/variants/compressed/inner/read_write/: any_stored_vec.rs  mod.rs  rollback.rs
crates/vecdb/src/variants/compressed/iterators/: clean.rs  dirty.rs  io.rs  mmap.rs  mod.rs
crates/vecdb/src/variants/compressed/lz4/: iterators.rs  mod.rs  strategy.rs
crates/vecdb/src/variants/compressed/pco/: iterators.rs  mod.rs  strategy.rs  trait.rs  value.rs
crates/vecdb/src/variants/compressed/pco/value/: mod.rs
crates/vecdb/src/variants/compressed/sources/: io.rs  mmap.rs
crates/vecdb/src/variants/compressed/view/: mod.rs
crates/vecdb/src/variants/compressed/zstd/: iterators.rs  mod.rs  strategy.rs
crates/vecdb/src/variants/computed/: computation.rs  iterator.rs  mod.rs
crates/vecdb/src/variants/eager/: aggregates.rs  arithmetic.rs  cumulative.rs  lookback.rs  mod.rs  statistics.rs  transforms.rs
crates/vecdb/src/variants/eager/compute/: aggregates.rs  cumulative.rs  lookback.rs  statistics.rs  transforms.rs
crates/vecdb/src/variants/lazy/: agg.rs  delta.rs  from3.rs  mod.rs
crates/vecdb/src/variants/lazy/agg/: fold.rs  mod.rs  sparse.rs
crates/vecdb/src/variants/lazy/from1/: mod.rs  readable.rs  transform.rs
crates/vecdb/src/variants/lazy/from2/: mod.rs  transform.rs
crates/vecdb/src/variants/lazy/from3/: any_vec.rs  mod.rs
crates/vecdb/src/variants/raw/: mod.rs
crates/vecdb/src/variants/raw/bytes/: iterators.rs  mod.rs  strategy.rs  trait.rs  value.rs
crates/vecdb/src/variants/raw/inner/: mod.rs  read_only.rs  read_write.rs  rollback.rs  strategy.rs
crates/vecdb/src/variants/raw/inner/read_only/: mod.rs
crates/vecdb/src/variants/raw/inner/read_write/: mod.rs
crates/vecdb/src/variants/raw/iterators/: clean.rs  dirty.rs  io.rs  mmap.rs  mod.rs  reader.rs
crates/vecdb/src/variants/raw/sources/: io.rs  mmap.rs
crates/vecdb/src/variants/raw/view/: mod.rs
crates/vecdb/src/variants/raw/zerocopy/: iterators.rs  mod.rs  strategy.rs
crates/vecdb/src/variants/stored/: format.rs  iterator.rs  mod.rs
crates/vecdb/src/version/: try_from_path.rs
crates/vecdb/tests/: basic.rs  basic2.rs  comprehensive.rs  compressed.rs  compute_functions.rs  concurrent_rw.rs  consistency.rs  integrity.rs  iterators.rs  mmap_file_consistency.rs  pcodec.rs  raw.rs  rollback.rs  scaling_bench.rs  write_visibility.rs  zerocopy.rs
crates/vecdb_bench/: Cargo.toml
crates/vecdb_bench/src/: bytesvec_impl.rs  fjall2_impl.rs  fjall3_impl.rs  fjall_impl.rs  lib.rs  main.rs  pcovec_impl.rs  redb_impl.rs  runner.rs  vecdb_compressed_impl.rs  vecdb_raw_impl.rs  vecdb_raw_old_impl.rs
crates/vecdb_derive/: Cargo.toml  README.md
crates/vecdb_derive/src/: lib.rs
crates/vecdb_derive/tests/: bytes.rs  bytes_generics.rs  pco.rs  pco_generics.rs
crates/vecdb_macros/: Cargo.toml
crates/vecdb_macros/src/: lib.rs
docs/: CHANGELOG.md  README.md  TODO.md
