[package]
name = "vecdb"
description = "High-performance mutable persistent vectors built on rawdb"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
derive = ["vecdb_derive"]
lz4 = ["dep:lz4_flex"]
pco = ["dep:pco"]
schemars = ["dep:schemars"]
serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json"]
sonic-rs = ["serde", "dep:sonic-rs"]
zerocopy = ["dep:zerocopy"]
zstd = ["dep:zstd"]

[dependencies]
ctrlc = { version = "3.5.1", features = ["termination"] }
log = { workspace = true }
parking_lot = { workspace = true }
rawdb = { workspace = true }
serde_json = { version = "1.0.149", features = ["float_roundtrip"], optional = true }
thiserror = "2"

# [optional-dependencies]
lz4_flex = { version = "0.12.0", default-features = false, optional = true }
pco = { version = "0.4.9", optional = true }
schemars = { version = "1.2.0", optional = true }
serde = { version = "1.0.228", optional = true }
sonic-rs = { version = "0.5.6", optional = true }
vecdb_derive = { workspace = true, optional = true }
zerocopy = { version = "0.8.33", features = ["zerocopy-derive"], optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
sha2 = "0.10"
tempfile = { workspace = true }
walkdir = "2.5"

[[example]]
name = "zerocopy"
required-features = ["zerocopy"]

[[example]]
name = "pcodec"
required-features = ["pco"]

[package.metadata.docs.rs]
all-features = true
