[package]
name = "vecdb_bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "vecdb_bench"
path = "src/main.rs"

[dependencies]
fjall = "3.0.1"
heed = "0.22.0"
redb = "3.1.0"
vecdb = { workspace = true, features = ["pco"] }

# Utilities
rand = "0.10.0"
rayon = "1.11"
anyhow = "1.0"
walkdir = "2.5"
byteorder = "1.5"
